tests/errors/vector-backend.ari
fn main() -> i64 {
  var values: Vec[i64] = [1, 2, 3];
  values.push(4);
  return values.len();
}
